# pricecheckuk_check

./: README.md  product_details.csv  products.csv  pyproject.toml
conf/: config.yaml
config/: config.yaml
outputs/2024-08-02/10-26-58/.hydra/: hydra.yaml
outputs/2024-08-02/10-29-18/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-02/10-29-36/.hydra/: hydra.yaml
outputs/2024-08-02/10-37-59/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-02/10-41-59/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-07/23-06-46/.hydra/: hydra.yaml
outputs/2024-08-07/23-09-59/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-07/23-14-08/.hydra/: hydra.yaml
outputs/2024-08-08/07-39-05/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-08/08-10-54/.hydra/: hydra.yaml
outputs/2024-08-14/18-34-53/.hydra/: hydra.yaml
outputs/2024-08-14/20-39-24/.hydra/: hydra.yaml
outputs/2024-08-19/14-25-50/.hydra/: config.yaml  hydra.yaml
src/: db.py  logger.py  main.py  products.csv  scraper.py  utils.py
src/outputs/2024-08-09/21-12-07/.hydra/: hydra.yaml
tests/: tests_script.py
ukpricecheck_scrape/: main.py  product_details.csv
ukpricecheck_scrape/outputs/2024-08-02/18-33-20/.hydra/: config.yaml  hydra.yaml
