[tool.poetry]
name = "ukpricecheck-scrape"
version = "0.1.0"
description = ""
authors = ["Njay2000 <narenhrithik2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
webdriver-manager = "^4.0.2"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
